# db-automation-discovery-backend-api

./: .env.example  .gitignore  README.md  alembic.ini  backend-api.toml  dbad-backend-api.toml  package.json  pyproject.toml  requirements-legacy.txt  run_server.py  setup.py
alembic/: env.py
app/: main.py
app/api/: profile.py  routes_user.py  tasks.py
app/core/: background.py  config.py  database.py  logging.py  logging.yaml  middleware.py
app/dtos/: userdto.py
app/models/: user.py
app/repositories/: user_repository.py
app/services/: user_service.py
dbad_backend_api/: run_server.py
dbad_backend_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dbad_backend_api/api/: main.py  middleware.py
dbad_backend_api/api/dtos/: project_dto.py  user_dto.py
dbad_backend_api/api/routes/: profile_routes.py  project_routes.py  router.py  tasks_routes.py  user_routes.py
dbad_backend_api/core/: database.py  settings.py
dbad_backend_api/core/models/: __init__.py  project.py  user.py
dbad_backend_api/core/repositories/: project_repository.py  user_repository.py
dbad_backend_api/core/services/: project_service.py  user_service.py
dbad_backend_api/core/services/tasks/: profiler.py
dbad_backend_api/dbad_backend_api.egg-info/: PKG-INFO  entry_points.txt  requires.txt
